--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<link rel="stylesheet" href="D:\RV UNIVERSITY\Web technologies\Assignment-3\styles.css">
+<link rel="stylesheet" href="styles.css">
 <style>
 p {background-color:green;color:white;}
 </style>
