--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<style>
+.heading1 {
+background-color:#f79b9b;font-family:verdana,"DejaVu Sans","sans-serif";
+}
+#num2{
+color:blue;font-size:36px;
+}
+#num4{color:black;font-size:24px;background-color:rgb(122, 205, 122)}
+</style>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +18,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="heading1">Number 1 - I'm a class!</p>
+    <div id="num2">Number 2 - I'm one ID.</div>
+    <p class="heading1"style="font-size:24px">Number 3 - I'm a class, but cooler!</p>
+    <div id="num4"><b>Number 4 - I'm another ID.</b></div>
+    <p class="heading1">Number 5 - I'm a class!</p>
   </body>
 </html>
