--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Click on the links to view the assignments</h1>
 <p>
   <a href="https://prabhasbhat.github.io/CSS-exercises-BSc/foundations/01-css-methods/">Question 1</a><br>
-  <a href="./CSS-exercises-BSc/foundations/02-class-id-selectors/index.html">Question 2</a>
+  <a href="foundations/02-class-id-selectors/index.html">Question 2</a>
   <br>
   <a href="q3.html">Question 3</a>
   <br>
