--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <a href="https://prabhasbhat.github.io/CSS-exercises-BSc/foundations/01-css-methods/">Question 1</a><br>
   <a href="foundations/02-class-id-selectors/index.html">Question 2</a>
   <br>
-  <a href="q3.html">Question 3</a>
+  <a href="foundations/03-grouping-selectors/index.html">Question 3</a>
   <br>
   <a href="q4.html">Question 4</a>
 </p>
