--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   <br>
   <a href="foundations/03-grouping-selectors/index.html">Question 3</a>
   <br>
-  <a href="q4.html">Question 4</a>
+  <a href="foundations/04-chaining-selectors/index.html">Question 4</a>
+  <br>
+   <a href="foundations/05-descendant-combinator/index.html">Question 5</a>
+  <br>
+  <a href="foundations/06-cascade-fix/index.html">Question 6</a>
+  <br>
 </p>
   </body>
 </html>
