--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body>
 <h1>Click on the links to view the assignments</h1>
 <p>
-  <a href="https://prabhasbhat.github.io/CSS-exercises-BSc/foundations/01-css-methods/">Question 1</a><br>
+  <a href="foundations/01-css-methods/">Question 1</a><br>
   <a href="foundations/02-class-id-selectors/index.html">Question 2</a>
   <br>
   <a href="foundations/03-grouping-selectors/index.html">Question 3</a>
