--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <body>
 <h1>Click on the links to view the assignments</h1>
 <p>
-  <a href="foundations/01-css-methods/">Question 1</a><br>
+  <a href="foundations/01-css-methods/">Question 1</a><br><br>
   <a href="foundations/02-class-id-selectors/index.html">Question 2</a>
-  <br>
+  <br><br>
   <a href="foundations/03-grouping-selectors/index.html">Question 3</a>
-  <br>
+  <br><br>
   <a href="foundations/04-chaining-selectors/index.html">Question 4</a>
-  <br>
+  <br><br>
    <a href="foundations/05-descendant-combinator/index.html">Question 5</a>
-  <br>
+  <br><br>
   <a href="foundations/06-cascade-fix/index.html">Question 6</a>
-  <br>
+  <br><br>
 </p>
   </body>
 </html>
